# LoboFEM2

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  imgui.ini  run.sh
src/LoboFEM/: CMakeLists.txt  LoboFEM.cpp  LoboFEM.h  cublasmain.cpp.back  main.cpp  maintest.cpp.back
src/LoboFEM/AutoDiff/: AutoDiffCore.h  LoboComplex.cpp  LoboComplex.h  LoboComplexMatrix.h
src/LoboFEM/CUDA/libcumatrix/: cuda_memory_manager.cpp  device_math.h  device_matrix.cu  device_matrix.h  device_vector_operators.h  math_ext.h
src/LoboFEM/Collision/: ShapeOpModel.cpp  ShapeOpModel.h  aabb.cpp  aabb.h  aap.cpp  aap.h  bvh.cpp  bvh.h  collide.cpp  collide.h  tri_contact.cpp  vec4d.h
src/LoboFEM/Collision/CollisionDector/: BVHCollisionDetector.cpp  BVHCollisionDetector.h  BVHTriModel.cpp  BVHTriModel.h  CollisionWorld.cpp  CollisionWorld.h
src/LoboFEM/Functions/: EigenMatrixIO.h  LoboMacros.h  MatrixNormalizeVector.h  PolarDecompostionComplex.h  SkewMatrix.cpp  SkewMatrix.h  computeSVDMatrix3d.cpp  computeSVDMatrix3d.h  computeTriangle.cpp  computeTriangle.h  deleteSTDvector.h  findElementInVector.h  parseString.h  rotationOperation.h
src/LoboFEM/LoboDynamic/: LoboDynamic.h  LoboDynamicScene.cpp  LoboDynamicScene.h
src/LoboFEM/LoboImGui/: MainWindow.cpp  MainWindow.h  imfilebrowser.h
src/LoboFEM/LoboMesh/: LoboMesh.cpp  LoboMesh.h  MeshControl.h
src/LoboFEM/LoboVolumtricMesh/: LoboTetMesh.cpp  LoboTetMesh.h
src/LoboFEM/OpenGLutils/: LoboCamera.cpp  LoboCamera.h  LoboScene.cpp  LoboScene.h  glfunctions.h
src/LoboFEM/Shaders/: LoboLighting.cpp  LoboLighting.h  LoboShader.cpp  LoboShader.h
src/LoboFEM/Utils/: glmEigenConverter.h  glmMyFunctions.h
(+139 files in other folders)
